Tests/ratings-prana-dev-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1  
  labels:
    group: prana-dev
  name: ratings-prana-dev-ing
  namespace: prana-dev-ns  
spec:
  rules:
  - host: prana-dev.internal.wkshpdev.com
    http:
      paths:      
      - backend:
          serviceName: nginx-svc
          servicePort: 80
        path: /nginx/?(.*)
